--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "objectpath": "^1.2.2",
     "rc-select": "^9.2.1",
     "react-schema-form": "^0.9.9",
-    "tv4": "^1.3.0"
+    "tv4": "^1.3.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@material-ui/core": ">=4.10.0",
